[project]
name = "hi_sooj1n"
version = "0.7.0"
description = "Default template for PDM package"
authors = [
    {name = "sooj1n", email = "sujin19371@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}
 
[project.scripts]
hi-sooj1n ="hi_sooj1n.hello:hi"


[tool.pdm]
distribution = true
